# servicemanual_rust

./: Cargo.toml  LICENSE.md  README.md
src/: device.rs  error.rs  machines.rs  main.rs  maintenance.rs  prelude.rs  service.rs
src/api/: device_api.rs  maintenance_api.rs  mod.rs
src/database/: device.rs  maintenance.rs  mod.rs  surreal_db.rs
src/model/: device.rs  maintenance.rs
src/models/: device.rs  maintenance.rs  mod.rs
src/tests/: crud_test.rs  mod.rs
src/utils/: macros.rs  mod.rs  populate.rs  try_froms.rs
