[package]
name = "servicemanual_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
csv = "1.2.0"
fastrand = "1.9.0"
actix-web = "4"
anyhow = "1.0.69"
tokio = {version="1.26.0", features = ["full"]}
surrealdb = {version = "1.0.0-beta.8", default-features=false, features = ['parallel', 'kv-mem'] }
serde = "1.0.152"
serde_json = "1.0.93"
futures = "0.3"
thiserror = "1"

